--- a/pom.xml
+++ b/pom.xml
@@ -18,21 +18,9 @@
             <version>4.13.1</version>
         </dependency>
         <dependency>
-            <groupId>pl.pragmatists</groupId>
-            <artifactId>JUnitParams</artifactId>
-            <version>1.1.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.5</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.9</version>
-            <scope>compile</scope>
+            <version>3.1</version>
         </dependency>
     </dependencies>
     <build>
@@ -42,17 +30,12 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <configuration>
-                    <mainClass>bgu.spl.mics.application.CRMSRunner</mainClass>
+                    <mainClass>bgu.spl.mics.example.ExampleManager</mainClass>
+                    <arguments>
+                        <argument>argument1</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-            <resource>
-                <directory>src/test/resources</directory>
-            </resource>
-        </resources>
     </build>
 </project>
